--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "1.17.1",
     "dotenv": "4.0.0",
     "express": "4.15.2",
+    "mysql": "2.13.0",
     "nodemon": "1.11.0",
     "path": "0.12.7"
   },
